# autocapture

./: .env.example  .gitignore  .local_index.txt  AGENTS.md  BLUEPRINT.md  CHECKSUM_POLICY.md  CONTRIBUTING.md  Makefile  NOTES_FOR_NEXT_LOOP.md  PILLARS.md  README.md  RUNTIME.md  TASKS.md  WORKLOG.md  alembic.ini  autocapture.yml  dev.ps1  docker-compose.yml  package-lock.json  package.json  pyinstaller.spec  pyproject.toml  pytest.ini
.codex/: ARCHITECTURE_NOTES.md  PR_CHECKLIST.md  QA_CHECKLIST.md  SESSION_LOG.md  STATE.md
.codex/notes/: spec-260118-discovery.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  dev-check.yml  research-scout.yml  update-poetry-lock.yml
.memory/: CANONICAL.md  DECISIONS.md  LEDGER.ndjson  STATE.json
.promptops/: run_report.json
.tools/: memory_guard.py  memory_schema.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_worker_leases.py  0002_worker_leases_and_hnsw_unique.py  0003_indexes_and_uniques.py  0004_normalize_spans_and_embeddings.py  0005_drop_vector_mapping.py  0006_event_embedding_leases.py  0007_agents_and_security.py  0008_threads_and_focus_paths.py  0009_runtime_state_and_retrieval_traces.py  0010_phase0_contracts.py  0011_overlay_tracker.py  0012_next10_contracts.py  0013_spec1_gateway_claims.py  0013_spec_single_machine_gateway_claims.py  0014_spec1_runs_and_citations.py  0014_spec_single_machine_runs_and_citations.py  0015_spec260118_memory_service.py  0016_sqlite_vector_backends.py  0017_capture_url_domain.py  0018_event_browse_indexes.py
archive/wpf-shell/: autocapture.sln
artifacts/: conflict_report.json  coverage_report.json  instability_report.json  integrity_report.json  latency_report.json  no_evidence_report.json  privacy_report.json  provenance_report.json
artifacts/bench/: bench_cpu.json  bench_gpu.json
autocapture/: __init__.py  __main__.py  config.py  contracts.py  contracts_next10.py  contracts_utils.py  debug.py  doctor.py  encryption.py  eval_gate.py  evals.py  export.py  fs_utils.py  gpu_lease.py  image_utils.py  logging_utils.py  main.py  modules.py  paths.py  presets.py  resilience.py  runtime.py  runtime_budgets.py  runtime_context.py  runtime_cpu.py  runtime_device.py  runtime_env.py  runtime_governor.py  runtime_pause.py  runtime_profile.py  runtime_profile_override.py  runtime_qos.py  settings_store.py  setup.py  smoke.py  time_utils.py
autocapture/_legacy/: __init__.py
autocapture/agents/: __init__.py  answer_graph.py  jobs.py  llm_client.py  schemas.py  structured_output.py
autocapture/answer/: claim_validation.py  claims.py  (+6 more)
bench/: README.md  baseline.json  ci_gate.py  run.ps1  run.sh  summarize.py
config/: example.yml  loki-config.yml  prometheus.yml  promtail-config.yml
data/: autocapture.db  autocapture.key
docs/: ARCHITECTURE.md  CHURN_CONTROL.md  CONTEXT_PACK.md  Compatibility_Map.md  Contracts.md  Eval_Gates.md  FINAL_PHASE2_REPORT.md  MOBILE_PWA.md  Migrations_and_Backfill.md  Observability.md  PHASE3.md  PROMPTOPS.md  PROMPT_STRATEGIES.md  RELEASE_CHECKLIST.md  SECURITY.md  TRON.md  WSL_WINDOWS_BRIDGE.md  architecture.md  capacity_planning.md  config-reference.md  dashboard.json  dpo_sample.json  gateway.md  memory-service.md  memory.md  memory_store.md  operations.md  overlay_tracker.md  phase3_task_checklist.md  plugins.md  runbook-single-machine.md  runtime.md  spec-260118-ux.md  step_by_step.md  training_sample.json  troubleshooting.md  verification.md
docs/plugin-authoring/entrypoint-example/: README.md  pyproject.toml
docs/plugin-authoring/entrypoint-example/autocapture_example_plugin/: __init__.py  factories.py
docs/plugin-authoring/entrypoint-example/autocapture_plugins/: example.entrypoint.yaml
docs/plugin-authoring/entrypoint-example/autocapture_plugins/example.entrypoint/assets/: README.txt
evals/: golden_queries.json  phase0_retrieval.jsonl  phase0_retrieval_baseline.json  promptops_ab_cases.json
infra/: compose.yaml
installer/: autocapture.iss
promptops/: __init__.py  eval.py
scripts/: build_windows_release.ps1  demo_flow.bat  demo_flow.ps1  graphrag_index.sh  graphrag_query.sh  graphrag_worker.sh  preflight_ci.bat  preflight_ci.ps1  preflight_ci_wsl.sh  run_api.sh  run_dpo.py  run_gateway.sh  run_graph_worker.sh  run_lora.py  run_qlora.py  run_vllm.sh  run_vllm_cpu.sh  run_vllm_gpu_a.sh  run_vllm_gpu_b.sh  training_utils.py  windows_full_setup.bat  windows_full_setup.ps1  windows_llm_setup.bat  windows_llm_setup.ps1  windows_reset_db.bat  windows_reset_db.ps1  windows_start_app.bat  windows_start_app.ps1
src/: README.md
tests/: conftest.py  test_agent_jobs.py  test_agent_worker_enrichment_fallback.py  test_agent_worker_fallbacks.py  test_agent_worker_llm_backoff.py  test_alias_resolution.py  test_answer_citations.py  test_answer_graph.py  test_answer_no_evidence_banner.py  test_answer_speculative.py  test_api_events.py  test_api_health_deep.py  test_api_media_variants.py  test_api_plugins_config.py  test_api_retrieve_paging.py  test_api_state.py  test_api_storage_stats.py  test_api_suggest_dashboard.py  test_api_supervisor.py  test_architecture_boundaries.py  test_backend_routing.py  test_backfill_resume.py  test_blueprint_validator.py  test_blueprint_validator_rules.py  test_bridge_endpoints.py  test_checksum_policy.py  test_citation_overlay.py  test_claim_validation.py  test_conflict_detector.py  test_context_pack.py  test_coverage_scoring.py  test_daily_highlights.py  test_db_tls_validation.py  test_delete_preview_safety.py  test_delete_range.py  test_device_manager.py  test_diffusionvl_server.py  test_doctor.py  test_doctor_ollama_model.py  test_duplicate_detector.py  (+164 more)
tools/: codex_status.py  conflict_gate.py  coverage_gate.py  diffusionvl_server.py  freeze_surfaces.py  integrity_gate.py  latency_gate.py  license_guardrails.py  memory_guard.py  no_evidence_gate.py  pillar_gate.py  privacy_scanner.py  provenance_gate.py  release_gate.py  repo_hygiene_check.py  research_scout_workflow.py  retrieval_sensitivity.py  validate_blueprint.py  vendor_windows_binaries.py  verify_checksums.py  warm_models.py
(+391 files in other folders)
