[tool.poetry]
name = "autocapture"
version = "0.1.0"
description = "High-performance local activity capture and recall pipeline"
readme = "README.md"
authors = ["Ninjra <dev@ninjra.ai>"]
packages = [{ include = "autocapture" }]
include = [
  "autocapture/prompts/**/*.yaml",
  "autocapture/ui/web/**",
  "autocapture/bench/fixtures/**",
  "autocapture/plugins/builtin/**",
]
# Exclude files from the built distribution (moved from tool.poetry.packages[*].exclude)
exclude = ["autocapture/_legacy/**"]

[tool.poetry.scripts]
autocapture = "autocapture.main:main"
memory-check = ".tools.memory_guard:main"
memory-rebuild = ".tools.memory_guard:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
pydantic = "^2.6.4"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
httpx = "^0.27.0"
pyside6 = { version = "^6.7.0", optional = true }
onnxruntime-gpu = { version = ">=1.19.0,<2.0", optional = true }
dateparser = "^1.2.0"
sqlalchemy = "^2.0.29"
psycopg = { version = "^3.1.18", extras = ["binary"] }
pillow = "^10.2.0"
numpy = "^1.26.4"
qdrant-client = "^1.8.2"
sentence-transformers = { version = "^2.4.0", optional = true }
fastembed = { version = "^0.3.3", optional = true }
uvloop = {version = "^0.19.0", markers = "sys_platform != 'win32'"}
prometheus-client = "^0.20.0"
cryptography = "^42.0.5"
psutil = "^5.9.8"
pysqlcipher3 = { version = "^1.2.0", optional = true, markers = "sys_platform != 'win32'" }
rotki-pysqlcipher3 = { version = "2024.10.1", optional = true, markers = "sys_platform == 'win32'" }
dxcam = { version = "^0.0.5", optional = true, markers = "sys_platform == 'win32'" }
mss = "^9.0.1"
rapidocr-onnxruntime = { version = "^1.3.24", optional = true }
openai = "^1.14.3"
python-dateutil = "^2.9.0"
PyJWT = "^2.8.0"
alembic = "^1.13.1"
apscheduler = "^3.10.4"
jinja2 = "^3.1.6"
python-multipart = "^0.0.21"
sqlglot = "^24.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"
pyinstaller = "^6.6.0"
pytest = "^8.2.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"

[tool.poetry.extras]
ui = ["pyside6"]
windows = ["dxcam"]
ocr = ["rapidocr-onnxruntime"]
ocr-gpu = ["onnxruntime-gpu"]
embed-fast = ["fastembed"]
embed-st = ["sentence-transformers"]
sqlcipher = ["pysqlcipher3", "rotki-pysqlcipher3"]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", ".ruff_cache", ".mypy_cache", "build", "dist", "__pycache__"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | \.ruff_cache
  | \.mypy_cache
  | build
  | dist
  | __pycache__
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
